--- a/lat-hinh.css
+++ b/lat-hinh.css
@@ -10,7 +10,7 @@ body {
 .body {
     margin: auto;
     background: #136969;
-    width: 80rem;
+    width: 70rem;
 }
 
 .title {
@@ -19,7 +19,7 @@ body {
     display: inline-block;
     width: 100%;
     height: 6rem;
-    border: 2px solid;
+    border-bottom: 3px solid;
 }
 
 .title .time {
@@ -65,8 +65,8 @@ body {
 }
 
 .item {
-    width: 10rem;
-    height: 10rem;
+    width: 7rem;
+    height: 7rem;
     float: left;
 }
 
@@ -86,4 +86,10 @@ body {
 
     width: calc(100% - 2rem);
     height: calc(100% - 2rem);
+}
+
+@media (max-width: 1145px) {
+    .body {
+        width: 100%;
+    }
 }
